# Algorithm

./: .gitignore  .gitmodules  README.txt  Sort.md
Audio/: ReadMeFirst.md
Audio/1.SignalProcess/3.Digital Filter/: 1.what is it.md
Audio/Program/1.AlgorithmReverb/: CMakeLists.txt  Freeverb.cpp  Freeverb.hpp  allpass.hpp  revmodel.cpp  tuning.h
Audio/Program/SignalProcess_C/: CMakeLists.txt  clean.sh  main.cpp
Audio/Program/SignalProcess_C/Compressor/: CMakeLists.txt
Audio/Program/SignalProcess_C/Custom1/: CMakeLists.txt
Audio/Program/SignalProcess_C/Custom1/Compressor/: CMakeLists.txt
Audio/Program/SignalProcess_C/Custom1/Compressor/src/: Compressor.cpp
Audio/Program/SignalProcess_C/Custom1/FIR/: CMakeLists.txt  lowpass.cpp
Audio/Program/SignalProcess_C/Custom1/Reverb/: CMakeLists.txt
Audio/Program/SignalProcess_C/Custom1/Reverb/include/: Reverb.h
Audio/Program/SignalProcess_C/Custom1/Reverb/src/: Reverb.cpp
Audio/Program/SignalProcess_C/Custom1/SineWaveGenerator/: CMakeLists.txt
Audio/Program/SignalProcess_C/Custom1/SineWaveGenerator/include/: SineWaveGenerator.h
Audio/Program/SignalProcess_C/Custom1/SineWaveGenerator/src/: SineWaveGenerator.cpp
Audio/Program/SignalProcess_C/Custom1/StereoSurround/: CMakeLists.txt
Audio/Program/SignalProcess_C/Custom1/StereoSurround/src/: StereoSurround.cpp
Audio/Program/SignalProcess_C/Freeverb/: CMakeLists.txt
Audio/Program/SignalProcess_C/Freeverb/Freeverb/: CMakeLists.txt
Audio/Program/SignalProcess_C/Freeverb/Freeverb/src/: Freeverb.cpp
Audio/Program/SignalProcess_C/Freeverb/allpass/: CMakeLists.txt
Audio/Program/SignalProcess_C/Freeverb/comb/include/: comb.hpp
Audio/Program/SignalProcess_C/Freeverb/comb/src/: comb.cpp
Audio/Program/SignalProcess_C/Freeverb/include/: CMakeLists.txt  Freeverb.hpp  denormals.h  revmodel.hpp
Audio/Program/SignalProcess_C/Freeverb/revmodel/include/: revmodel.hpp
Audio/Program/SignalProcess_C/Freeverb/src/: allpass.cpp
Audio/Program/SignalProcess_C/Main/: CMakeLists.txt  main.cpp
CPlusPlus/02C++核心编程/: test  test.cpp
ModernControlTheory/SystemIdentification/: comb.py  fir.py  getImpulseResponse.cpp  readme.txt
SignalProcess/: .gitignore  build.sh  main.cpp
SignalProcess/FIR/: lowpass  lowpass.py
SignalProcess/Reverb/: CMakeLists.txt  reverb.cpp  reverb.h
SignalProcess/StereoSurround/: StereoSurround.h
SignalProcess/test_tool/: freeverb.py
math/: basic.md
math/0.Signal Transfund/: 1.Transfund Type.md
math/1.Convolution/: 1.what is convolution.md  2.where i can use it.md
math/3.Digital Filter/: 1.what is it.md
math/3.Digital Filter/FIR Filter/: 1.what is it.md
math/3.Digital Filter/IIR  Filter/: 1.what is it.md
math/4.Resample/: case.py
math/Program/SignalProcess_C/Reverb/: reverb.h
math/Program/SignalProcess_C/test_tool/: freeverb.py
math/SignalProcess/0.Signal Transform/: 1.Transform Type.md
math/SignalProcess/1.Convolution/: 3.how to reach it.md
math/SignalProcess/2.FFT/: 1.what is it.md
project/: .gn  BUILD.gn  README.txt  project_build.lds
project/config/: config.gni  global_config.gni  global_defines.gni  include_dir_common.gni  project_config.gni
project/src/: BUILD.gn  main.c  test.c
project/src/audio/: BUILD.gn
project/src/audio/audio_effect/: BUILD.gn  README.md  README_v2.md  audio_effect.c  audio_effect.h  hd_audio_effect.c  hd_audio_effect.h
project/src/audio/audio_effect/effect_chain/: BUILD.gn  hd_audio_effect_wrapper.c  hd_audio_effect_wrapper.h
project/src/audio/audio_effect/effect_chain/v1/: BUILD.gn  hd_audio_effect_v1.c  hd_audio_effect_v1.h
project/src/audio/audio_effect/effect_chain/v2/: BUILD.gn  hd_audio_effect_v2.c  hd_audio_effect_v2.h
project/src/audio/audio_effect/effect_factory/: BUILD.gn  effect_store.c  effect_store.h
project/src/audio/audio_effect/effect_factory/audio_gain/: BUILD.gn  hd_audio_gain.c  hd_audio_gain.h  hd_audio_gain_v2.c
project/src/audio/audio_effect/effect_factory/pass_through/: BUILD.gn  hd_pass_through.c  hd_pass_through.h
project/src/audio/audio_effect/effect_module/: BUILD.gn
project/src/audio/audio_effect/effect_module/audio_gain/: BUILD.gn  audio_gain.c  audio_gain.h  hd_audio_gain.c  hd_audio_gain.h
project/src/audio/audio_effect/examples/: bench_effect_v2.c  loader_v2_demo.c  run_bench.sh  test_effect_v2.c
project/src/audio/audio_effect/plugin_loader/: plugin_loader.c  plugin_loader.h  plugin_loader_v2.c  plugin_loader_v2.h
project/src/circle_fifo/: circle_fifo.c
project/src/component/: BUILD.gn
project/src/component/circle_fifo/: BUILD.gn  circle_fifo.c  circle_fifo.h  hd_circle_fifo.c  hd_circle_fifo.h
project/src/component/deque/: BUILD.gn  DEQUE.md  deque.c  deque.h  deque_array.c  deque_array.h  deque_list.c  deque_list.h  hd_deque.c  hd_deque.h  hd_deque_array.c  hd_deque_array.h  hd_deque_list.c  hd_deque_list.h
project/src/component/list/: BUILD.gn  hd_list.c  hd_list.h
project/src/component/mem_op/: hd_mem_alloc.c  hd_mem_alloc.h
project/src/component/thread/: BUILD.gn  hd_thread.c  hd_thread.h  thread.h
project/src/component/timer/: BUILD.gn  hd_soft_timer.c  hd_soft_timer.h
project/src/deque/: BUILD.gn  a.out  deque.cpp  deque.h  deque_array.c  deque_array.h
project/src/mem_op/: mem_alloc.c  mem_alloc.h
project/src/smoke_test/: smoke_test.c
project/src/smoke_test/receive_audio_pack/: receive_audio_pack.c
project/src/soft_timer/: a.out  soft_timer.c
project/src/thread/: BUILD.gn  thread.c
project/src/timer/: BUILD.gn  soft_timer.c  soft_timer.h
project/tools/gn/: get_lastest_binary.sh
project/tools/ninja/: get_lastest_binary.sh
signal/: .gitignore  CMakeLists.txt  build.sh  compressor.cpp  generateSineWave  generateSineWave.c  generateSineWave.cpp  main.cpp  output.pkf  reverb.cpp  stereo_surround.cpp
signal/Reverb/: reverb.cpp
signal/SineWaveGenerator/: CMakeLists.txt  SineWaveGenerator.cpp  SineWaveGenerator.h
signal/StereoSurround/: CMakeLists.txt  StereoSurround.cpp
signal/include/: compressor.h  generateSineWave.h  reverb.h  stereo_surround.h
