# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# 引用 config.gni 文件
import("//config/global_config.gni")

defines += global_defines
include_dirs += []
sources += []

executable("myapp") {
  if (use_shared_implementation == false) {
    deps += [ "src:static_src" ]
  } else {
    deps += [ "src:source_src" ]
  }
}