# config.gni

# 定义一个全局配置
global_config = []

# 定义一个依赖项
deps = []

# 定义一个源文件
sources = []

# 定义一个宏定义
defines = []

# 定义include_dirs
include_dirs = [
    "//src/component/circle_fifo",
    "//src/component/deque",
    "//src/component/thread",
    "//src/component/timer",

    "//src/audio/audio_effect",

    "//src/open_source/jemalloc",
]

# 定义cflags
cflags = [  "-fPIC",
            "-pthread",
            "-Wall",
            "-Werror",
            "-Wno-unused-variable",
            "-Wno-unused-function",
            "-Wno-unused-parameter",
            "-Wno-unused-but-set-variable",
            "-Wno-unused-value",
            "-Wno-unused-label",
            "-Wno-unused-local-typedefs",
            "-Wno-unused-private-field",
            "-Wno-unused-const-variable",
]

# 定义cflags_c
cflags_c = [
    "-g" # 调试信息
]

# 定义cflags_cc
cflags_cc = [
    "-g" # 调试信息
]

# 定义ldflags
ldflags = [
]

# 定义libs
libs = []

# 定义frameworks
# frameworks = []

# 定义swiftmodules
# swiftmodules = []

# 定义output_extension
# output_extension = ""