# project_config.gni

# 定义变量区域

# 定义cflags
cflags = [  "-fPIC",
            "-pthread",
            "-Wall",
            "-Werror",
            "-Wno-unused-variable",
            "-Wno-unused-function",
            "-Wno-unused-parameter",
            "-Wno-unused-but-set-variable",
            "-Wno-unused-value",
            "-Wno-unused-label",
            "-Wno-unused-local-typedefs",
            "-Wno-unused-private-field",
            "-Wno-unused-const-variable",
]

# 定义输出的库文件类型 a:静态库 so:动态库 none:不输出
output_lib_file_type = "a"