# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# 引用 config.gni 文件
import("//config/config.gni")

# 引用 project_config.gni 文件
import("//config/project_config.gni")

defines = global_defines
include_dirs += [ "deque" ]
sources += [ "test.c" ]

source_set("src") {
  print("src:$sources")
  deps += [ "deque:deque" ]
}