# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# 引用 config.gni 文件
import("//config/config.gni")

# 引用 project_config.gni 文件
import("//config/project_config.gni")

defines = global_defines
include_dirs += [
]
sources += [
  "main.c"
]
deps += [ 
]

module_name = get_path_info(rebase_path("."), "name")
source_set("$module_name") {
  print("$module_name:$sources")
  deps += [ 
    "audio:audio",
    "component:component",
  ]
}