# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# 引用 config.gni 文件
import("//config/global_config.gni")

defines = global_defines
sources += [
  "deque_array.c",
  "deque.h",
]

source_set("source_deque") {
  print("source_deque:$sources")
}

shared_library("shared_deque") {
  print("shared_deque:$sources")
}

static_library("static_deque") {
  print("static_deque:$sources")
}