# Authors nolan.lan <nolan.lan@dji.com>
# Date 2025-09-15 19:00

# 引用 config.gni 文件
import("//config/include_dir_common.gni")

# 引用 project_config.gni 文件
import("//config/project_config.gni")

include_dirs = audio_effect_include_dirs
sources = [
  "hd_audio_gain.c",
]
deps = [ 
]

if (output_lib_file_type == "a") {
    static_library("audio_gain") {
      #print("audio_gain:$sources")
    }
} else if (output_lib_file_type == "so") {
    shared_library("audio_gain") {
      #print("audio_gain:$sources")
    }
} else if (output_lib_file_type == "none") {
    source_set("audio_gain") {
      #print("audio_gain:$sources")
    }
}